changed self pic shadow to avoid issue on mobile version

--- a/src/app/mixins.scss
+++ b/src/app/mixins.scss
@@ -9,8 +9,8 @@ background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
 }
 
 @mixin imageBoxing {
-    -webkit-box-shadow: 15px 15px 15px 0px #000000, inset 4px 4px 15px 0px #000000, 5px 5px 15px 5px rgba(0,0,0,0); 
-box-shadow: 15px 15px 15px 0px #000000, inset 4px 4px 15px 0px #000000, 5px 5px 15px 5px rgba(0,0,0,0);
+    -webkit-box-shadow: -15px 15px 15px 0px #000000, inset 4px 4px 15px 0px #000000, 5px 5px 15px 5px rgba(0,0,0,0); 
+    box-shadow: -15px 15px 15px 0px #000000, inset 4px 4px 15px 0px #000000, 5px 5px 15px 5px rgba(0,0,0,0);
     
 }
 
